--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "chalk": "^5.1.2",
+    "color": "^4.2.3",
     "colors": "^1.4.0",
     "express": "^4.18.2",
     "nodemon": "^2.0.20",
