--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "chalk": "^5.1.2",
     "color": "^4.2.3",
     "colors": "^1.4.0",
+    "ejs": "^3.1.8",
     "express": "^4.18.2",
     "nodemon": "^2.0.20",
     "simple-node-logger": "^21.8.12"
