--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "colors": "^1.4.0",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
+    "mongoose": "^6.7.5",
     "nodemon": "^2.0.20",
     "simple-node-logger": "^21.8.12"
   }
